OpenApi documentation & instructions updated
